tests/negative/syntax/import_after_declaration/input.ci
int helper() { return 1; }
import "utils.ci";
void main() {}
